clean up and added Output struct

--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "SubgradientMethods"
 uuid = "2037ce15-bd2f-49ba-917e-342cbbfcb5a9"
 authors = ["Unknown "]
 version = "0.1.0"
+
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
